# algrad

./: .clang-format  CMakeLists.txt  LICENSE
compiler/: CMakeLists.txt
compiler/src/: control_flow.cpp  dead_code_elimination.cpp  emitter.cpp  hir.cpp  hir.hpp  hir_inlines.hpp  instruction_selection.cpp  ir.cpp  ir.hpp  lir.cpp  lir.hpp  lower_io.cpp  promote_variables.cpp  register_allocation.cpp  spirv_loader.cpp  spirv_loader.hpp  split_composites.cpp  standalone.cpp  types.cpp  types.hpp
